--- a/index.html
+++ b/index.html
@@ -8,19 +8,8 @@
 </head>
 <body>
     <header>
-      <!-- <section id="hero">
-         .banner>img+h1+p+button
-           <div class="banner">
-            <img class="man" src="assets/Group.png" alt="">
-            <h1 class="title">"In the near future, I hope to become a Developer."</h1>
-            <p class="description">The future of web developer jobs looks bright, with a projected 22% increase in software developer jobs between 2020 and 2030</p>
-            <button>Contact with me</button>
-          </div> 
-      </section> -->
-    </header>
-    <main>
-      <section id="hero">
-        <!-- .banner>img+h1+p+button -->
+      <!-- <section id="hero"></section>
+         .banner>img+h1+p+button 
         <div class="banner">
           <img class="man" src="assets/Group.png" alt="">
           <h1 class="title">"In the near future, I hope to become a Developer."</h1>
@@ -30,7 +19,63 @@
           </div>
           
         </div>
+    </section> -->
+    </header>
+
+    <main>
+       <section id="hero">
+        <!-- .banner>img+h1+p+button  -->
+        <div class="banner">
+          <img class="man" src="assets/Group.png" alt="">
+          <h1 class="title">"In the near future, I hope to become a Developer."</h1>
+          <p class="sub-title">The future of web developer jobs looks bright, with a projected 22% increase in software developer jobs between 2020 and 2030.</p>
+          <div class="btn-container">
+            <button class="btn-primary">Contact with me</button>
+          </div>
+        </div>
     </section>
+        <section id="why-box">
+          <div class="why-container">
+            <div class="title">
+                  <h1 class="title">Why Web Development??</h1>
+                  <p class="sub-title">It allows you to bring your ideas to life and create interactive, visually appealing websites and applications.</p>
+            </div>
+            <div class="card">
+              <div class="why-card">
+                <h4 class="why-title">I will Do Coding and Change The World</h4>
+                <p class="why-discription">With every line of code, I am one step closer to making a significant impact on society.</p>
+                <div class="img1">
+                  <img src="assets/Layer_1.png" alt="">
+                </div>
+                <div class="btn">
+                  <button>Learn More</button>
+                </div>
+              </div>
+              <div class="why-card1">
+                <div class="Change">
+                <h4 class="why-title1">I will help People by creating Modern Web System</h4>
+                <p class="why-discription1">My goal is to develop cutting-edge web solutions that empower individuals and communities.</p>
+                <div class="img2">
+                  <img src="assets/Group 3.png" alt="">
+                </div>
+                <div class="btn">
+                  <button>Learn More</button>
+                </div>
+                </div>
+              </div>
+              <div class="why-card">
+                <h4 class="why-title">I will Do Coding and Change The World</h4>
+                <p class="why-discription">By harnessing the potential of technology, I will contribute to a future where everyone can thrive.</p>
+                <div class="img3">
+                  <img src="assets/Group 4.png" alt="">
+                </div>
+                <div class="btn">
+                  <button>Learn More</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <footer>
 
