--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
             </div>
           </div>
         </section>
+        <section class="inspiration">
+          <div>
+          <div class="title">
+            <h1 class="title">My Inspiration</h1>
+            <p class="sub-title">Sir Tim Berners-Lee invented the World Wide Web in 1989. Sir Tim Berners-Lee is a British computer scientist.</p>
+          </div>
+          <div class="video-cover">
+              <div class="video">
+                <iframe width="1140" height="440" src="https://www.youtube.com/embed/GUrDI6OkJfU?si=IZYo3XWf0x0TQzjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+          </div>
+          </div>
+        </section>
     </main>
     <footer>
 
