--- a/index.html
+++ b/index.html
@@ -89,6 +89,38 @@
           </div>
           </div>
         </section>
+        <section class="skills ">
+          <div>
+             <h1 class="title text-center">My Current Target</h1> 
+            <p class="sub-title text-center">Complete HTML , CSS , JavaScript</p>
+            </div>
+            <div class="skill-container">
+              <div class="different-btg1">
+              <div class="skill">
+                <img class="skill-img" src="assets/html.png" alt="">
+                <h2 class="skill-title">HTML</h2>
+                <p class="skill-description">HTML (HyperText Markup Language) is the most basic building block of the Web.</p>
+                <a class="dark-2" href="" >Learn More</a>
+              </div>
+              </div>
+              <div class="different-btg2">
+              <div class="skill">
+                <img class="skill-img" src="assets/css.png" alt="">
+                <h2 class="skill-title">CSS</h2>
+                <p class="skill-description">Cascading Style Sheets (CSS) is a powerful language used to enhance the presentation of HTML documents.</p>
+                <a class="dark-2" href="" >Learn More</a>
+              </div>
+              </div>
+              <div class="different-btg3">
+              <div class="skill">
+                <img class="skill-img" src="assets/js.png" alt="">
+                <h2 class="skill-title">JavaScript</h2>
+                <p class="skill-description">JavaScript is a scripting or programming language that allows to implement complex features on web pages.</p>
+                <a class="dark-2" href="" >Learn More</a>
+              </div>
+              </div>
+            </div>
+        </section>
     </main>
     <footer>
 
