added_support_section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
               </div>
             </div>
         </section>
+        <section class="support-box ">
+          <div class="inside-support ">
+            <h2 class="title text-center">I need Support</h2>
+            <p class="sub-title text-center">Feel free to tell your problem.</p>
+          </div>
+            <div class="email-btn ">
+                  <form action="">
+                    <input type="email" name="" id="" placeholder="Suggest me any feedback for me">
+                    <input class="btn-primary1" type="submit" value="Submit"> 
+               </form>
+          </div>
+        </section>
     </main>
     <footer>
 
