--- a/index.html
+++ b/index.html
@@ -8,21 +8,16 @@
 </head>
 <body>
     <header>
-      <!-- <section id="hero"></section>
-         .banner>img+h1+p+button 
-        <div class="banner">
-          <img class="man" src="assets/Group.png" alt="">
-          <h1 class="title">"In the near future, I hope to become a Developer."</h1>
-          <p class="description">The future of web developer jobs looks bright, with a projected 22% increase in software developer jobs between 2020 and 2030.</p>
-          <div class="btn-container">
-            <button class="btn-primary">Contact with me</button>
-          </div>
-          
+      <nav class="nav-header">
+        <h3 class="nav-title">Pritom.M</h3>
+          <div class="nav-resume">
+        <button class="nav-subtitle">Download Resume</button>
         </div>
-    </section> -->
+      </nav>
     </header>
 
     <main>
+      <!-- Banner section -->
        <section id="hero">
         <!-- .banner>img+h1+p+button  -->
         <div class="banner">
@@ -30,10 +25,12 @@
           <h1 class="title">"In the near future, I hope to become a Developer."</h1>
           <p class="sub-title">The future of web developer jobs looks bright, with a projected 22% increase in software developer jobs between 2020 and 2030.</p>
           <div class="btn-container">
-            <button class="btn-primary">Contact with me</button>
+            <button onclick="location.href='#footer-part'" class="btn-primary">Contact with me</button>
           </div>
         </div>
     </section>
+
+    <!-- Why Web Development section -->
         <section id="why-box">
           <div class="why-container">
             <div class="title">
@@ -76,6 +73,7 @@
             </div>
           </div>
         </section>
+        <!-- My inspiration section -->
         <section class="inspiration">
           <div>
           <div class="title">
@@ -89,6 +87,8 @@
           </div>
           </div>
         </section>
+
+        <!-- My skills section -->
         <section class="skills ">
           <div>
              <h1 class="title text-center">My Current Target</h1> 
@@ -121,6 +121,8 @@
               </div>
             </div>
         </section>
+
+        <!-- Support section -->
         <section class="support-box ">
           <div class="inside-support ">
             <h2 class="title text-center">I need Support</h2>
@@ -134,8 +136,17 @@
           </div>
         </section>
     </main>
-    <footer>
 
+    <!-- Footer part -->
+    <footer id="footer-part">
+        <div class="footer-contant">
+             <h3 class="footer-title">An Open Commitment by Pritom Majumder</h3>
+              <div class="footer-img"> 
+             <a href="https://www.facebook.com/"><img class="facebook" src="assets/facebook.png" alt=""></a> 
+             <a href="https://github.com/Pritom-Majumder"><img class="github" src="assets/github.png" alt=""></a> 
+              <a href="https://www.linkedin.com/in/pritom-majumder-5836a7302/"><img class="linkedin" src="assets/linkedin-icon 1.png" alt=""></a>
+             </div>
+        </div>
     </footer>
 </body>
 </html>
