added_my_target_link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img class="skill-img" src="assets/html.png" alt="">
                 <h2 class="skill-title">HTML</h2>
                 <p class="skill-description">HTML (HyperText Markup Language) is the most basic building block of the Web.</p>
-                <a class="dark-2" href="" >Learn More</a>
+                <a class="dark-2" href="https://www.w3schools.com/html/html_intro.asp" >Learn More</a>
               </div>
               </div>
               <div class="different-btg2">
@@ -108,7 +108,7 @@
                 <img class="skill-img" src="assets/css.png" alt="">
                 <h2 class="skill-title">CSS</h2>
                 <p class="skill-description">Cascading Style Sheets (CSS) is a powerful language used to enhance the presentation of HTML documents.</p>
-                <a class="dark-2" href="" >Learn More</a>
+                <a class="dark-2" href="https://www.w3schools.com/css/css_intro.asp" >Learn More</a>
               </div>
               </div>
               <div class="different-btg3">
@@ -116,7 +116,7 @@
                 <img class="skill-img" src="assets/js.png" alt="">
                 <h2 class="skill-title">JavaScript</h2>
                 <p class="skill-description">JavaScript is a scripting or programming language that allows to implement complex features on web pages.</p>
-                <a class="dark-2" href="" >Learn More</a>
+                <a class="dark-2" href="https://www.w3schools.com/js/js_intro.asp" >Learn More</a>
               </div>
               </div>
             </div>
