added banner_section in _header

--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
         <button class="nav-subtitle">Download Resume</button>
         </div>
       </nav>
-    </header>
 
-    <main>
-      <!-- Banner section -->
-       <section id="hero">
+      <section id="hero">
         <!-- .banner>img+h1+p+button  -->
         <div class="banner">
-          <img class="man" src="assets/Group.png" alt="">
+          <img class="man " src="assets/Group.png" alt="">
           <h1 class="title">"In the near future, I hope to become a Developer."</h1>
           <p class="sub-title">The future of web developer jobs looks bright, with a projected 22% increase in software developer jobs between 2020 and 2030.</p>
           <div class="btn-container">
@@ -29,7 +26,9 @@
           </div>
         </div>
     </section>
-
+    </header>
+    <main>
+       
     <!-- Why Web Development section -->
         <section id="why-box">
           <div class="why-container">
@@ -89,7 +88,7 @@
         </section>
 
         <!-- My skills section -->
-        <section class="skills ">
+        <section class="skills text-center">
           <div>
              <h1 class="title text-center">My Current Target</h1> 
             <p class="sub-title text-center">Complete HTML , CSS , JavaScript</p>
